# astrolab

./: .gitignore  14.tess  14.txt  Extrema_timings_v2.1.py  README.md  pyproject.toml
apps/approximation/: logic.py  main.py  plot.py  ui.py
apps/error_oc_leastsq/: Error O-C using scipy.optimize.leastsq.ipynb
apps/lc_grid_plot/: lc_grid_plot.py
apps/maxima_params/: __init__.py  logic.py  main.py
apps/oc_curve/: __init__.py  logic.py  main.py  plot.py
apps/period/: __init__.py  logic.py  main.py  ui.py
