[project]
name = "astrolab"
version = "0.1.0"
description = "A laconic collection of small astronomy tools (multi-app) managed with uv."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "matplotlib>=3.8",
    "vispy>=0.13",
    "pyside6>=6.7"
]

[project.optional-dependencies]
dev = ["ruff>=0.5"]

[dependency-groups]
dev = ["ruff>=0.5"]

[project.scripts]
# Allows: uv run approximation
approximation = "apps.approximation.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["apps"]

[tool.uv]
package = true
